...
  return (
    <>
      <View style={styles.section}>
        <View style={styles.menuCard}>
          <MenuItem
            icon="logout"
            label="Sign Out"
            onPress={signOut}
            showDivider={hasPasswordProvider}
          />
          {hasPasswordProvider && (
            <>
              <MenuItem
...
