...
            <TouchableOpacity
                onPress={handleToggleGroupAffiliations}
                activeOpacity={1}
                style={styles.groupAffiliationsHeader}
            >
                <Text style={styles.groupAffiliationsTitle}>
                    Connections
                </Text>
                <MaterialCommunityIcons
                    name={showGroupAffiliations ? "chevron-up" : "chevron-down"}
                    size={24}
                    color={styles.text.color}
                />
...
